--- a/templates/test_template.html
+++ b/templates/test_template.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
-    {% if title %}
-    <title>{{title}} - microblog</title>
-    {% else %}
-    <title>Welcome to microblog</title>
-    {% endif %}
+      {% if title %}
+      <title>{{title}} - microblog</title>
+      {% else %}
+      <title>Welcome to microblog</title>
+      {% endif %}
   </head>
   <body>
       <h1>Hello, {{user.name}}!</h1>
